css/colors.css
body {
  background-color: #ffffff;
  color: #333344;
}
a,
.vertical-tab-link,
.links li {
  color: #386e9d;
}
.vertical-tab-selected {
  color: #333344;
}
.l-header {
  background-color: #20252e;
  color: #fffffe;
}
.l-header a,
.l-header .links li {
  color: #fffffe;
}
.l-header .menu a {
  border-bottom: 1px dotted #2c4a64;
}
.l-header .menu a:hover {
  background-color: #2c4a64;
}
.l-header .menu a.active::after {
  background-color: #2c4a64;
}
ul.primary li a,
ul.primary li a:hover {
  background-color: #e6e6e6;
  border-color: #333344;
}
ul.primary li.active a {
  background-color: #ffffff;
}
.menu-tree li a.active {
  color: #333344;
}
.page-title {
  border-bottom: 1px solid #cccccc;
}
/**
 * Pager
 */
.pager-first,
.pager-previous,
.pager-ellipsis,
.pager-current,
.pager-next,
.pager-last,
.pager-item {
  background: #2c4a64;
  color: #fffffe;
}
.pager-ellipsis {
  color: #586172;
}
.pager-first a,
.pager-previous a,
.pager-next a,
.pager-last a,
.pager-item a {
  color: #fffffe;
}
.pager-first a:hover,
.pager-previous a:hover,
.pager-next a:hover,
.pager-last a:hover,
.pager-item a:hover {
  background: #386e9d;
  color: #ffffff;
}
.pager-current {
  background: #888b8e;
  color: #fff;
}

/**
 * Progress Bar
 */
.progress .bar {
  border-color: #bdc3c8;
  background: #bdc3c8;
}
.progress .filled {
  background: #386e9d;
}
blockquote {
  border-left: 4px solid #cccccc;
}
pre {
  border: 1px solid #cccccc;
}
fieldset,
button,
input,
optgroup,
select,
textarea {
  border: 1px solid #cccccc;
  color: #333344;
  background-color: #ffffff;
}
.form-item-disabled input {
  background-color: #f8f8f8;
}
button:focus,
input:focus,
select:focus,
textarea:focus {
  border-color: #509bdd;
}
input.form-submit,
button.form-submit,
.button {
  color: #fffffd;
  border: 1px solid #ffffff;
  background-color: #386e9e;
}
input.button-danger {
  background-color: #ff4747;
  border-color: #ffffff;
}
input.form-submit:hover,
input.form-submit:focus,
button.form-submit:hover,
button.form-submit:focus,
.button:hover,
.buttom:focus {
  background-color: #386e9e;
  color: #fffffd;
  outline: 1px solid #386e9d;
}
input.button-danger:hover {
  background-color: #ff4747;
  outline-color: #ff4747;
}
.button.form-delete,
.button.form-delete:hover {
  background-color: #ff4747;
  outline-color: #ff4747;
}
select {
  background-color: initial;
  border: 1px solid #cccccc;
}
.vertical-tabs {
  background-color: #e6e6e7;
  border: 1px solid #cccccc;
}
.vertical-tabs-panes {
  background-color: #ffffff;
}
.vertical-tab-item {
  background-color: #f8f8f8;
  border: 1px solid #cccccc;
}
.vertical-tab-selected.vertical-tab-item {
  background-color: #ffffff;
}
.vertical-tab-selected strong,
.vertical-tab-selected .fieldset-legend {
  color: #333344;
}
tr.even, tr.odd {
  border-color: #cccccc;
}
tr.odd {
  background-color: #f8f8f8;
}
td.active {
  background-color: #e6e6e6;
}
@media screen and (max-width: 1024px) {
  .l-header .menu-toggle-button {
    background-color: #fffffe;
    color: #20252e;
    border: 2px solid #20252e;
  }
  .menu-toggle-button-text {
    border-top: 4px solid #20252e;
  }
  .menu-toggle-button-text::before {
    border-top: 4px solid #20252e;
    border-bottom: 4px solid #20252e;
  }
  .nav-visible .menu-toggle-button-text {
    border: 4px solid #20252e;
    border-right-color: transparent;
    border-top-color: transparent;
  }
}
.block-hero {
  color: #feffff;
  background-color: #2B2F42;
}
.l-footer {
  background-color: #20252f;
  color: #fffdff;
}
.l-footer a {
  color: #fffdff;
}
.search-block-form .form-actions {
  background-color: #386e9e;
}
.search-block-form .form-actions::before {
  border: 3px solid #fffffd;
}
.search-block-form .form-actions::after {
  border-right: 3px solid #fffffd;
}
.comment {
  border: 1px solid #cccccc;
  background-color: #f8f8f8;
}
.comments .indented .comment::before {
  border: 2px solid #cccccc;
  border-left-color: transparent;
  border-bottom-color: transparent;
}
.view-promoted .view-content > div {
  border-bottom: 1px solid #cccccc;
}
@media screen and (min-width: 960px) {
  .view-promoted .view-content > div:nth-child(odd) {
    border-right: 1px solid #cccccc;
  }
}

